# cm_dotfiles

./: .chezmoiignore  dot_bash_profile  dot_bashrc  dot_bashrc.tmpl  dot_clang-format  dot_dircolors.tmpl  dot_gitconfig.tmpl  dot_gitignore  dot_ripgreprc  dot_taskrc.tmpl  dot_xinitrc  executable_connect  symlink_dot_dircolors
.chezmoitemplates/: dircolors_arch.tmpl  dircolors_centos7.tmpl
dot_bash_core/: aliases.sh.tmpl  binaries.sh  colors.sh  env.sh.tmpl  executable_files  fzf.sh  opts.sh  ruby.sh  timefuncs.sh  utils.sh
dot_config/alacritty/: alacritty.toml
dot_config/clangd/: config.yaml
dot_config/flameshot/: flameshot.ini
dot_config/i3/: config
dot_config/nvim/: init.lua  lazy-lock.json  main.c
dot_config/nvim/lua/core/: aucommands.lua  binds.lua  options.lua  shada.lua
dot_config/nvim/lua/plugins/: align.lua  basics.lua  colorschemes.lua  colortils.lua  comment.lua  complete.lua  diffview.lua  formatting.lua  fzf.lua  git.lua  lsp.lua  markdown.lua  neckpain.lua  neoclip.lua  plenary.lua  snippets.lua  table.lua  tabular.lua  telescope.lua  templates.lua  toml.lua  yaml.lua
dot_config/nvim/lua/snippets/: c.lua  cmake.lua  sh.lua
dot_config/nvim/lua/templates/: bitwise.c  cpu.c  debug.c  intfuncs.c  ipow.c  listen.c  macros.c  simd.c  (+1 more)
dot_config/nvim/lua/templates/cmake/bundle_uring/: CMakeLists.txt
dot_config/nvim/skeletons/CMakeLists.txt/: CMakeLists.txt
dot_config/private_mpv/: empty_mpv.conf  input.conf
dot_config/qmk/: private_qmk.ini
dot_config/yt-dlp/: config
dot_config/zellij/: config.kdl  config.kdl.tmpl
private_dot_local/scripts/: display  executable_extract_frames.sh  executable_fdb_setup.sh  executable_install_local.sh  executable_tsk  executable_wspc  install_local.sh
(+62 files in other folders)
